core/asmglobal-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asmglobal-web
  namespace: web-system
spec:
  selector:
    app: asmglobal-web
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
